generated/GLFW3.cs


    // <remarks>  This is the function signature for keyboard key callback functions.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="key">The [keyboard key](</param>
    // <param name="scancode">The system-specific scancode of the key.</param>
    // <param name="action">`GLFW_PRESS`, `GLFW_RELEASE` or `GLFW_REPEAT`.</param>
    // <param name="mods">
    // <para>Bit field describing which [modifier keys](</para>
    // <para>held down.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWkeyfun(global::System.IntPtr _0, int _1, int _2, int _3, int _4);

    // <remarks>  This is the function signature for Unicode character callback functions.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="codepoint">The Unicode code point of the character.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWcharfun(global::System.IntPtr _0, uint _1);

    // <remarks>
    // <para>  This is the function signature for Unicode character with modifiers callback</para>
    // <para>  functions.  It is called for each input character, regardless of what</para>
    // <para>  modifier keys are held down.</para>
    // </remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="codepoint">The Unicode code point of the character.</param>
    // <param name="mods">
    // <para>Bit field describing which [modifier keys](</para>
    // <para>held down.</para>
    // </param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWcharmodsfun(global::System.IntPtr _0, uint _1, int _2);

    // <remarks>  This is the function signature for file drop callbacks.</remarks>
    // <param name="window">The window that received the event.</param>
    // <param name="count">The number of dropped files.</param>
    // <param name="paths">The UTF-8 encoded file and/or directory path names.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWdropfun(global::System.IntPtr _0, int _1, sbyte** _2);

    // <remarks>  This is the function signature for monitor configuration callback functions.</remarks>
    // <param name="monitor">The monitor that was connected or disconnected.</param>
    // <param name="event">One of `GLFW_CONNECTED` or `GLFW_DISCONNECTED`.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWmonitorfun(global::System.IntPtr _0, int _1);

    // <remarks>
    // <para>  This is the function signature for joystick configuration callback</para>
    // <para>  functions.</para>
    // </remarks>
    // <param name="joy">The joystick that was connected or disconnected.</param>
    // <param name="event">One of `GLFW_CONNECTED` or `GLFW_DISCONNECTED`.</param>
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void GLFWjoystickfun(int _0, int _1);

    public unsafe partial class GLFWmonitor
    {
        [StructLayout(LayoutKind.Explicit, Size = 0)]
        public partial struct __Internal
        {
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWmonitor> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWmonitor>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::glfw3.GLFWmonitor __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new GLFWmonitor(native.ToPointer(), skipVTables);
        }

        internal static global::glfw3.GLFWmonitor __CreateInstance(global::glfw3.GLFWmonitor.__Internal native, bool skipVTables = false)
        {
            return new GLFWmonitor(native, skipVTables);
        }

        private static void* __CopyValue(global::glfw3.GLFWmonitor.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::glfw3.GLFWmonitor.__Internal));
            *(global::glfw3.GLFWmonitor.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private GLFWmonitor(global::glfw3.GLFWmonitor.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected GLFWmonitor(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }
    }

    public unsafe partial class GLFWwindow
    {
        [StructLayout(LayoutKind.Explicit, Size = 0)]
        public partial struct __Internal
        {
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWwindow> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWwindow>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::glfw3.GLFWwindow __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new GLFWwindow(native.ToPointer(), skipVTables);
        }

        internal static global::glfw3.GLFWwindow __CreateInstance(global::glfw3.GLFWwindow.__Internal native, bool skipVTables = false)
        {
            return new GLFWwindow(native, skipVTables);
        }

        private static void* __CopyValue(global::glfw3.GLFWwindow.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::glfw3.GLFWwindow.__Internal));
            *(global::glfw3.GLFWwindow.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private GLFWwindow(global::glfw3.GLFWwindow.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected GLFWwindow(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }
    }

    public unsafe partial class GLFWcursor
    {
        [StructLayout(LayoutKind.Explicit, Size = 0)]
        public partial struct __Internal
        {
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWcursor> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWcursor>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::glfw3.GLFWcursor __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new GLFWcursor(native.ToPointer(), skipVTables);
        }

        internal static global::glfw3.GLFWcursor __CreateInstance(global::glfw3.GLFWcursor.__Internal native, bool skipVTables = false)
        {
            return new GLFWcursor(native, skipVTables);
        }

        private static void* __CopyValue(global::glfw3.GLFWcursor.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::glfw3.GLFWcursor.__Internal));
            *(global::glfw3.GLFWcursor.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private GLFWcursor(global::glfw3.GLFWcursor.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected GLFWcursor(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }
    }

    // <remarks>  This describes a single video mode.</remarks>
    public unsafe partial class GLFWvidmode : IDisposable
    {
        [StructLayout(LayoutKind.Explicit, Size = 24)]
        public partial struct __Internal
        {
            [FieldOffset(0)]
            public int width;

            [FieldOffset(4)]
            public int height;

            [FieldOffset(8)]
            public int redBits;

            [FieldOffset(12)]
            public int greenBits;

            [FieldOffset(16)]
            public int blueBits;

            [FieldOffset(20)]
            public int refreshRate;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.ThisCall,
                EntryPoint="??0GLFWvidmode@@QAE@ABU0@@Z")]
            internal static extern global::System.IntPtr cctor_1(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWvidmode> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.GLFWvidmode>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::glfw3.GLFWvidmode __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new GLFWvidmode(native.ToPointer(), skipVTables);
        }

        internal static global::glfw3.GLFWvidmode __CreateInstance(global::glfw3.GLFWvidmode.__Internal native, bool skipVTables = false)
        {
            return new GLFWvidmode(native, skipVTables);
        }

        private static void* __CopyValue(global::glfw3.GLFWvidmode.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::glfw3.GLFWvidmode.__Internal));
            *(global::glfw3.GLFWvidmode.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private GLFWvidmode(global::glfw3.GLFWvidmode.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected GLFWvidmode(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }

        public GLFWvidmode()
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::glfw3.GLFWvidmode.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }
